--- a/countrybution.html
+++ b/countrybution.html
@@ -22,7 +22,7 @@ opacity: 0;
     <marquee behavior="" direction=""><H2>@ 15.12.2023 # Gift Contributions</H2></marquee>
 
 <div class="alldiv">
-    <button class="all1">click to pay 75 Rs</button>
+    <button class="all1">click to pay 75 rs Rs</button>
     <div><img id="a" src="1w.jpeg" alt=""></div>
 </div>
 
